# NTU-Assignments

./: .gitignore  .gitmodules  README.md
CZ1104/: CZ1104 Lab 1.ipynb  CZ1104 Lab 3.ipynb
CZ1104 Linear Algebra/: CZ1104 Lab 1.ipynb  CZ1104 Lab 4.ipynb
CZ1107 Data Structures & Algorithms/Assignment 1/: CZ1107 Assignment1.c
CZ1107 Data Structures & Algorithms/Assignment 2/: Assignment 2 Q1.c  Assignment 2 Q4.c
CZ1107 Data Structures & Algorithms/Assignment 5/: Assignment 5 Q3.c
CZ1107 Data Structures & Algorithms/Assignment 7+8/: Assignment 7 Q2.c
CZ1107/Assignment 2/: Assignment 2 Q2.c  Assignment 2 Q3.c
CZ1107/Assignment 3/: Assignment 3 Q2.c  Assignment 3 Q3.c  Assignment 3 Q4.c
CZ1107/Assignment 4/: Assignment 4 Q1.c  Assignment 4 Q2.c  Assignment 4 Q3.c
CZ1107/Assignment 5/: Assignment 5 Q1.c  Assignment 5 Q2.c
CZ1107/Assignment 6/: Assignment 6 Q1.c  Assignment 6 Q2.c  Assignment 6 Q3.c
CZ1107/Assignment 7+8/: Assignment 7 Q1.c  Assignment 7 Q3.c  Assignment 7 Q4.c
CZ2002 OOP/Lab 5/: Animal.cpp  Zoo.cpp  ZooMain.cpp  animal.h  animalClass.cpp  animalClass.h  (+2 more)
CZ4031 Database Principles/Project 1/: .gitignore  CMakeLists.txt  README.md  compile.bat  compile.sh  cz4031_project_1
CZ4031 Database Principles/Project 1/data/: sample.tsv
CZ4031 Database Principles/Project 1/include/: block.h  bpTree.h  disk.h  experiments.h  helper.h  structs.h
CZ4031 Database Principles/Project 1/src/: block.cpp  bpTree.cpp  disk.cpp  experiments.cpp  helper.cpp  main.cpp
CZ4052 Cloud Computing/: Assignment 1.ipynb  Assignment 2.ipynb  README.md
(+187 files in other folders)
